<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tracy_vendor</name>
  <version>0.0.1</version>
  <description>Wrapper for tracy</description>
  <maintainer email="mjcarroll@intrinsic.ai">Michael Carroll</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://github.com/mjcarroll/tracy_vendor</url>
  <author email="mjcarroll@intrinsic.ai">Michael Carroll</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
